# realtime-MEV-detection-bot

app/services/injest/: Cargo.toml  injest.rs
src/: Cargo.toml  classify.rs  ingest.rs  main.rs  simulate.rs  types.rs
src/common/: graph.rs  mod.rs  types.rs
src/operations/: arbitrage.rs  mod.rs
