[package]
name = "injest"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "injest"
path = "injest.rs"

[dependencies]
reth-network       = { git = "https://github.com/paradigmxyz/reth", tag = "v2.3.0" }
reth-network-peers = { git = "https://github.com/paradigmxyz/reth", tag = "v2.3.0" }
reth-storage-api    = { git = "https://github.com/paradigmxyz/reth", tag = "v2.3.0" }
reth-tasks          = { git = "https://github.com/paradigmxyz/reth", tag = "v2.3.0" }
tokio    = { version = "1", features = ["full"] }
futures  = "0.3"
anyhow   = "1"
